# advent-of-code-2024

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/advent_of_code_2024/: helpers.py
src/advent_of_code_2024/day_01/: part_1.py  part_2.py
src/advent_of_code_2024/day_02/: part_1.py  part_2.py
tests/day_01/: test_day_01.py
tests/day_02/: test_day_02.py
